# grpc-vs-rest

./: .gitignore  CMakeLists.txt  README.md  build-proto.sh
performance-logs/: 1.txt  WindowsClient-MacServer-HighWorkload.txt  WindowsClient-MacServer.txt  same machin client-server grpc(wit.txt
python/: build.sh
python/src/: README.md  comprehensive_test_client.py  helloworld_client.py  helloworld_pb2.py  helloworld_pb2_grpc.py  loop_client.py  loop_pb2.py  loop_pb2.pyi  loop_pb2_grpc.py  performance_client.py  performance_test_pb2.py  performance_test_pb2.pyi  performance_test_pb2_grpc.py  rest_comprehensive_test.py  rest_performance_client.py  validation_client.py
resources/: loop.proto  performance_test.proto
src/: helloworldImpl.cc  loopImpl.cc  looping.cc  rest_server.cpp
